# nanogpt-jax

./: Readme.md  TODOs.md  attention_factory.py  attentions.py  config.py  data_utils.py  layers.py  nanogpt.py  norms.py  positional_embeddings.py  pyproject.toml  run_training.py  test_attentions.py  test_layers.py  train.py
config/: README.md  model_config_mhla.yaml
