[project]
name = "nanogpt-jax"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "einops>=0.8.1",
    "equinox>=0.13.0",
    "jax>=0.7.0",
    "jaxtyping>=0.3.2",
    "optax>=0.2.5",
    "orbax-checkpoint>=0.11.20",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "tiktoken>=0.9.0",
    "transformers>=4.54.1",
    "wandb>=0.21.0",
]
